mutants.out/log/src__tls.rs_line_163_col_9_001.log

*** src/tls.rs:163:9: replace <impl AsyncWrite for TlsStream<S>>::poll_flush -> std::task::Poll<Result<(), io::Error>> with Poll::from(Ok(()))

*** mutation diff:
--- src/tls.rs
+++ replace <impl AsyncWrite for TlsStream<S>>::poll_flush -> std::task::Poll<Result<(), io::Error>> with Poll::from(Ok(()))
@@ -155,17 +155,17 @@
     ) -> std::task::Poll<Result<usize, io::Error>> {
         self.project().stream.poll_write(cx, buf)
     }
 
     fn poll_flush(
         self: std::pin::Pin<&mut Self>,
         cx: &mut std::task::Context<'_>,
     ) -> std::task::Poll<Result<(), io::Error>> {
-        self.project().stream.poll_flush(cx)
+        Poll::from(Ok(())) /* ~ changed by cargo-mutants ~ */
     }
 
     fn poll_shutdown(
         self: std::pin::Pin<&mut Self>,
         cx: &mut std::task::Context<'_>,
     ) -> std::task::Poll<Result<(), io::Error>> {
         self.project().stream.poll_shutdown(cx)
     }


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
    Finished dev [unoptimized + debuginfo] target(s) in 1.07s

*** result: Success

*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml --locked --all-features --all-targets
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
error[E0433]: failed to resolve: use of undeclared type `Poll`
   --> src/tls.rs:163:9
    |
163 |         Poll::from(Ok(())) /* ~ changed by cargo-mutants ~ */
    |         ^^^^ use of undeclared type `Poll`
    |
help: consider importing one of these items
    |
4   + use core::task::Poll;
    |
4   + use std::task::Poll;
    |

For more information about this error, try `rustc --explain E0433`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
